bpo-40417: Fix deprecation warning in PyImport_ReloadModule